[package]
name = "rendlessh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.17",features = ["full"]}
clap = {version = "3", features = ["derive"]}
signal-hook = "0.3"
toml = "0.5"
failure = "0.1"